add catalog files

--- a/HTML/catalog.htm
+++ b/HTML/catalog.htm
@@ -44,8 +44,8 @@
                     <div class="top-right">
                         <div class="register"> 
                             <div class="autoizations">
-                            <div  style="color: #db3d3c;">
-                                <a href="javascript:void(0)" style="color:black;">RU</a><span> || </span><a href="javascript:void(0)">EN</a> &nbsp;&nbsp;  </div>
+                            <div> <!-- style="color: #db3d3c;" -->
+                                <a href="javascript:void(0)" class="radius-lang">RU</a><span style="color:#db3d3c;" > | </span><a href="javascript:void(0)" class="radius-lang-eng">EN</a> &nbsp;&nbsp; </div>
                                 <!--  <a href="javascript:void(0)" onclick="form_callback()" role="button" data-toggle="modal" class="btn btn-danger">Заказать звонок</a> -->
                                 <div class="tel"><a href="callto:+380505319333">Виталий: +38 050 531 9333</a></div>
 						        <!--<div class="tel"><a href="mailto:sales@mazceramics.com">sales@mazceramics.com</a></div>-->                           
@@ -92,16 +92,16 @@
                                 <a href="./catalog.htm"> Каталог </a>
                             </li>                            
                             <li>
-                                <a href="http://mazceramics.com/new_arrivals/">Новинки</a>
-                            </li>                          
+                                <a href="./news.htm">Новинки</a>
+                            </li>                                              
                             <li>
                                 <a href="./how.htm">Условия покупки</a>
                             </li>
                             <li>
-                                <a href="http://mazceramics.com/about-us/">О нас</a>
+                                <a href="./about.htm">О нас</a>
                             </li>
                             <li>
-                                <a href="http://mazceramics.com/contacts/">Контакты</a>
+                                <a href="./contacts.htm">Контакты</a>
                             </li>
                            <!--  <li>
                                 <span class="navbar-form-w">
@@ -149,7 +149,7 @@
 <aside class="span3 left-sidebar" id="tourStep1">
     <div class="sidebar-item sidebar-filters" id="sidebarFilters">
         <div class="underlined">
-            <a href="http://mazceramics.com/catalog/"><h3><span class="sub-logo lobster"><span class="light">Каталог</span></span></h3></a>
+            <a href="http://mazceramics.com/catalog/"><h3><span class="sub-logo Open_Sans"><span class="light">Каталог</span></span></h3></a>
         </div>
         <div class="accordion-group" id="tourStep2">
             <div class="accordion-heading">
@@ -162,25 +162,25 @@
                                                 </li>    
                                             <li><a href="./cups.htm" class="">Чашки чайные</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/dekor/" class="">Чашки кофейные</a>
+                                            <li><a href="./cofeecups.htm" class="">Чашки кофейные</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/novogodnjaja-kollektcija/" class="">Бокал для пива</a>
+                                            <li><a href="./jug.htm" class="">Бокал для пива</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/posuda/" class="">Чайные наборы</a>
+                                            <li><a href="./teaset.htm" class="">Чайные наборы</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/sadovyj-dekor/" class="">Кофейные наборы</a>
+                                            <li><a href="./coffeeset.htm" class="">Кофейные наборы</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/serijnaja-posuda-iz-keramiki/" class="">Кувшины</a>
+                                            <li><a href="./goblet.htm" class="">Кувшины</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/simvol-goda/" class="">Набор для специй</a>
+                                            <li><a href="./species.htm" class="">Набор для специй</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/suveniry/" class="">Вазы</a>
+                                            <li><a href="./vase.htm" class="">Вазы</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/tcvetochnye-vazy-vazony-kashpo/" class="">Подсвечники</a>
+                                            <li><a href="./candels.htm" class="">Подсвечники</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/tcvety/" class="">Товары для животных</a>
+                                            <li><a href="./animal.htm" class="">Товары для животных</a>
                                                 </li>    
-                                            <li><a href="http://mazceramics.com/ekskljuzivnye-fotoprinty/" class="">Для аквариума</a>
+                                            <li><a href="./sea.htm" class="">Для аквариума</a>
                                                 </li>    
                                                                 
                 </ul>
@@ -226,8 +226,8 @@
                                     <div class="product">                	    
                                         <div class="product-img">
                                             <div class="picture">
-                                                <a href="http://mazceramics.com/aksessuary-dlja-vannoj-komnaty/">
-                                                                                                            <img title="Наборы для вина" alt="Наборы для вина" src="mazceramics/products/1/12.jpg" height="187" lang="ru" width="270">
+                                                <a href="./vines.htm">
+                                                                                                            <img title="Наборы для вина" alt="Наборы для вина" src="mazceramics/products/1/35.jpg" height="187" lang="ru" width="270">
                                                                                                     </a>
                                             </div>
                                         </div>
@@ -240,7 +240,7 @@
                                     <div class="product">                	    
                                         <div class="product-img">
                                             <div class="picture">
-                                                <a href="http://mazceramics.com/posuda/">
+                                                <a href="./cups.htm">
                                                 <img title="Посуда" alt="Посуда" src="mazceramics/products/2/15.jpg" height="187" lang="ru" width="270">
                                                                                                     </a>
                                             </div>
@@ -254,8 +254,8 @@
                                     <div class="product">                	    
                                         <div class="product-img">
                                             <div class="picture">
-                                                <a href="http://mazceramics.com/dekor/">
-                                                                                                            <img title="Чашки чайные" alt="Чашки чайные" src="mazceramics/products/1/12.jpg" height="187" lang="ru" width="270">
+                                                <a href="./cofeecups.htm">
+                                                                                                            <img title="Чашки чайные" alt="Чашки чайные" src="mazceramics/products/2/13.jpg" height="187" lang="ru" width="270">
                                                                                                     </a>
                                             </div>
                                         </div>
@@ -268,8 +268,8 @@
                                     <div class="product">                	    
                                         <div class="product-img">
                                             <div class="picture">
-                                                <a href="http://mazceramics.com/aksessuary-dlja-kukhni/">
-                                                                                                            <img title="Чашки кофейные" alt="Чашки кофейные" src="mazceramics/products/1/12.jpg" height="187" lang="ru" width="270">
+                                                <a href="./jug.htm">
+                                                                                                            <img title="Чашки кофейные" alt="Чашки кофейные" src="mazceramics/products/2/33.jpg" height="187" lang="ru" width="270">
                                                                                                     </a>
                                             </div>
                                         </div>
@@ -282,8 +282,8 @@
                                     <div class="product">                	    
                                         <div class="product-img">
                                             <div class="picture">
-                                                <a href="http://mazceramics.com/tcvety/">
-                                                                                                            <img title="Бокал для пива" alt="Бокал для пива" src="mazceramics/products/1/12.jpg" height="187" lang="ru" width="270">
+                                                <a href="./teaset.htm">
+                                                                                                            <img title="Бокал для пива" alt="Бокал для пива" src="mazceramics/products/3/2.jpg" height="187" lang="ru" width="270">
                                                                                                     </a>
                                             </div>
                                         </div>
@@ -296,8 +296,8 @@
                                     <div class="product">                	    
                                         <div class="product-img">
                                             <div class="picture">
-                                                <a href="http://mazceramics.com/suveniry/">
-                                                                                                            <img title="Сувениры" alt="Сувениры" src="mazceramics/products/1/12.jpg" height="187" lang="ru" width="270">
+                                                <a href="./coffeeset.htm">
+                                                                                                            <img title="Сувениры" alt="Сувениры" src="mazceramics/products/3/9.jpg" height="187" lang="ru" width="270">
                                                                                                     </a>
                                             </div>
                                         </div>
@@ -310,8 +310,8 @@
                                     <div class="product">                	    
                                         <div class="product-img">
                                             <div class="picture">
-                                                <a href="http://mazceramics.com/sadovyj-dekor/">
-                                                                                                            <img title="Садовый декор" alt="Садовый декор" src="mazceramics/products/1/12.jpg" height="187" lang="ru" width="270">
+                                                <a href="./goblet.htm">
+                                                                                                            <img title="Садовый декор" alt="Садовый декор" src="mazceramics/products/1/26.jpg" height="187" lang="ru" width="270">
                                                                                                     </a>
                                             </div>
                                         </div>
@@ -324,8 +324,8 @@
                                     <div class="product">                	    
                                         <div class="product-img">
                                             <div class="picture">
-                                                <a href="http://mazceramics.com/novogodnjaja-kollektcija/">
-                                                                                                            <img title="Новогодняя коллекция" alt="Новогодняя коллекция" src="mazceramics/products/1/12.jpg" height="187" lang="ru" width="270">
+                                                <a href="./species.htm">
+                                                                                                            <img title="Новогодняя коллекция" alt="Новогодняя коллекция" src="mazceramics/products/5/7.jpg" height="187" lang="ru" width="270">
                                                                                                     </a>
                                             </div>
                                         </div>
@@ -338,8 +338,8 @@
                                     <div class="product">                	    
                                         <div class="product-img">
                                             <div class="picture">
-                                                <a href="http://mazceramics.com/simvol-goda/">
-                                                                                                            <img title="Символ года" alt="Символ года" src="mazceramics/products/1/12.jpg" height="187" lang="ru" width="270">
+                                                <a href="./vase.htm">
+                                                                                                            <img title="Символ года" alt="Символ года" src="mazceramics/products/4/23.jpg" height="187" lang="ru" width="270">
                                                                                                     </a>
                                             </div>
                                         </div>
@@ -352,8 +352,8 @@
                                     <div class="product">                	    
                                         <div class="product-img">
                                             <div class="picture">
-                                                <a href="http://mazceramics.com/serijnaja-posuda-iz-keramiki/">
-                                                                                                            <img title="Серийная посуда из керамики" alt="Серийная посуда из керамики" src="mazceramics/products/1/12.jpg" height="187" lang="ru" width="270">
+                                                <a href="./candels.htm">
+                                                                                                            <img title="Серийная посуда из керамики" alt="Серийная посуда из керамики" src="mazceramics/products/4/28.jpg" height="187" lang="ru" width="270">
                                                                                                     </a>
                                             </div>
                                         </div>
@@ -366,8 +366,8 @@
                                     <div class="product">                	    
                                         <div class="product-img">
                                             <div class="picture">
-                                                <a href="http://mazceramics.com/tcvetochnye-vazy-vazony-kashpo/">
-                                                                                                            <img title="Цветочные вазы, вазоны, кашпо" alt="Цветочные вазы, вазоны, кашпо" src="mazceramics/products/1/12.jpg" height="187" lang="ru" width="270">
+                                                <a href="./animal.htm">
+                                                                                                            <img title="Цветочные вазы, вазоны, кашпо" alt="Цветочные вазы, вазоны, кашпо" src="mazceramics/products/5/8.jpg" height="187" lang="ru" width="270">
                                                                                                     </a>
                                             </div>
                                         </div>
@@ -381,7 +381,7 @@
                                         <div class="product-img">
                                             <div class="picture">
                                                 <a href="http://mazceramics.com/ekskljuzivnye-fotoprinty/">
-                                                                                                            <img title="Эксклюзивные фотопринты" alt="Эксклюзивные фотопринты" src="mazceramics/products/1/12.jpg" height="187" lang="ru" width="270">
+                                                                                                            <img title="Эксклюзивные фотопринты" alt="Эксклюзивные фотопринты" src="mazceramics/products/3/3.jpg" height="187" lang="ru" width="270">
                                                                                                     </a>
                                             </div>
                                         </div>
