--- a/HTML/how.htm
+++ b/HTML/how.htm
@@ -44,8 +44,8 @@
                     <div class="top-right">
                         <div class="register"> 
                             <div class="autoizations">
-                            <div  style="color: #db3d3c;">
-                                <a href="javascript:void(0)" style="color:black;">RU</a><span> || </span><a href="javascript:void(0)">EN</a> &nbsp;&nbsp;  </div>
+                            <div> <!-- style="color: #db3d3c;" -->
+                                <a href="javascript:void(0)" class="radius-lang">RU</a><span style="color:#db3d3c;" > | </span><a href="javascript:void(0)" class="radius-lang-eng">EN</a> &nbsp;&nbsp; </div>
                                 <!--  <a href="javascript:void(0)" onclick="form_callback()" role="button" data-toggle="modal" class="btn btn-danger">Заказать звонок</a> -->
                                 <div class="tel"><a href="callto:+380505319333">Виталий: +38 050 531 9333</a></div>
                                 <!--<div class="tel"><a href="mailto:sales@mazceramics.com">sales@mazceramics.com</a></div>-->                           
@@ -91,16 +91,16 @@
                                 <a href="./catalog.htm"> Каталог </a>
                             </li>                           
                             <li>
-                                <a href="http://mazceramics.com/new_arrivals/">Новинки</a>
+                                <a href="./news.htm">Новинки</a>
                             </li>                                              
-                            <li class="active">
+                            <li  class="active">
                                 <a href="./how.htm">Условия покупки</a>
                             </li>
                             <li>
-                                <a href="http://mazceramics.com/about-us/">О нас</a>
+                                <a href="./about.htm">О нас</a>
                             </li>
                             <li>
-                                <a href="http://mazceramics.com/contacts/">Контакты</a>
+                                <a href="./contacts.htm">Контакты</a>
                             </li>
 
                           
@@ -132,107 +132,107 @@
             <h1 class="lobster about-us">Условия покупки</h1>
             <div class="row">
                 <aside class="span3">
-<div class="sidebar-item">
-<div class="row">
-<div id="spyMenu" class="span3 affix-top">
-<ul class="nav nav-pills nav-stacked">
-<li><a href="#first">Как сделать заказ?</a></li>
-<li><a href="#two">Условия сотрудничества</a></li>
-</ul>
-</div>
-</div>
-</div>
-</aside>
-<section class="span9">
-<section class="blocks-spacer">
-<div id="first" class="row-fluid push-down-20">
-<div class="underlined push-down-20">
-<h3><span class="light">Как</span> сделать заказ?</h3>
-</div>
-<h5>Регистрация</h5>
-<p>Для оформления заказа необходимо зарегистрироваться на нашем сайте.</p>
-<p>В появившемся окне нужно заполнить обязательные поля (e-mail, ФИО, 
-телефоны и т.д) По окончании ввода нажмите кнопку «Зарегистрироваться».</p>
-<h5><span class="light">Как</span> оформить заказ?</h5>
-<p>Перед тем, как наполнять корзину, Вам необходимо выполнить вход используя Ваш логин и пароль.</p>
-<p>После авторизации на сайте, выберите нужный товар, укажите нужное 
-количество и нажмите на кнопку "В КОРЗИНУ", товар автоматически попадет в
- корзину. Содержимое заказа можно в любой момент просмотреть или 
-отредактировать, переходя в корзину.</p>
-<p>Для оформления заказа нажмите на кнопку "Оформить заказ", проверьте 
-сумму и количество товаров, по желанию напишите комментарий к заказу и 
-нажмите кнопку Купить.</p>
-<h5><span class="light">Как</span> просмотреть историю своих заказов?</h5>
-<p>Для просмотра истории заказов войдите в "Личный кабинет", в меню 
-выберите "Мои заказы". Выберите номер заказа и нажмите "Повторить", 
-далее Вы увидите краткую информацию о заказе.</p>
-<p>Для просмотра товара с фотографиями и выборочного повтора заказа 
-нажмите на на кнопку "Повторить заказ". Укажите нужное количество, 
-удалите не нужные товаров из списка. Нажмите на кнопку "Добавить в 
-корзину". По желанию Вы можете предварительно очистить корзину.</p>
-</div>
-</section>
-<section>
-<div id="two" class="underlined push-down-20">
-<h3>Условия сотрудничества</h3>
-</div>
-<p>Минимальная сумма заказа составляет 1000 грн.</p>
-<h5><span class="light">1.</span> Заключение Договора:</h5>
-<p>Для заключения договора необходимо:</p>
-<p>&nbsp;&nbsp;Для индивидуальных предпринимателей:</p>
-<ul>
-<li>свидетельство о регистрации СПД.</li>
-<li>свидетельство о постановке на налоговый учет.</li>
-<li>справка из банка об открытии счета.</li>
-<li>Копия паспорта предпринимателя.</li>
-<li>Полное наименование (юридический и фактический адрес, адрес 
-магазина/склада, банковские реквизиты, контактный телефон и адрес 
-электронной почты).</li>
-</ul>
-<p>&nbsp;&nbsp;Для юридических лиц:</p>
-<ul>
-<li>свидетельство о регистрации юридического лица.</li>
-<li>свидетельство о постановке на налоговый учет.</li>
-<li>справка из банка об открытии счета.</li>
-<li>Копия устава: титульная страница, последняя страница, страница об 
-учредителях, страница о назначении и сроках полномочий директора.</li>
-<li>Полное наименование (юридический и фактический адрес, адрес 
-магазина/склада, банковские реквизиты, ФИО и контакты главного 
-бухгалтера, контактный телефон и адрес электронной почты).</li>
-<li>Образец подписи руководителя и копия печати предприятия.</li>
-</ul>
-<h5><span class="light">2.</span> Порядок оплаты товара</h5>
-<p>Оплата товара производится на основании выставленного счета.Срок 
-действия счета - 3 банковских дня. Если в течение этого времени Вы не 
-направили средства в оплату счета, он становится недействительным и Вам 
-необходимо созвониться со своим менеджером перед оплатой и получить от 
-компании новый счет.</p>
-<p>Датой оплаты заказа считается дата зачисления средств на расчетный 
-счет нашей компании. Возможна наличная и безналичная форма оплаты 
-товара.</p>
-<p>Платежи от частных лиц и от третьих лиц не принимаются.</p>
-<p>В компании действует индивидуальная для каждого клиента система скидок.</p>
-<h5><span class="light">3.</span> Доставка товара:</h5>
-<p>Представленные в каталоге товарные позиции находятся на складах и 
-можно забрать самостоятельно с нашего склада либо оформив доставку.</p>
-<p>Служба доставки нашей компании доставляет заказы свыше 5000 грн в 
-пределах г. Одессы бесплатно. Доставка товара на сумму менее 5000 грн 
-осуществляется на основании действующих тарифов.</p>
-<p>Доставка товара в другие города Украины осуществляется через 
-транспортную компанию, выбранную Покупателем. Оплата доставки заказа 
-определяется исходя из расположения Покупателя. Стоимость доставки для 
-заказанных товаров обсуждается непосредственно с транспортными 
-компаниями. Стоимость доставки определяется тарифами 
-фирмы-перевозчика.При доставке через транспортную компанию, которую 
-выбирает Покупатель, обязательным условием является дополнительная 
-(жесткая)упаковка груза, (данную услугу предоставляет транспортная 
-компания). Если товар отгружался без обрешетки по желанию клиента, 
-Поставщик не несет ответственности за возможный бой товара.</p>
-<p>Доставка заказа, отпускаемого на условиях предоплаты, производится 
-только после поступления денежных средств на расчетный счет нашей 
-компании за заказанный товар.</p>
-</section>
-<hr></section>
+                    <div class="sidebar-item">
+                        <div class="row">
+                            <div id="spyMenu" class="span3 affix-top">
+                                <ul class="nav nav-pills nav-stacked">
+                                    <li><a href="#first">Как сделать заказ?</a></li>
+                                    <li><a href="#two">Условия сотрудничества</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </aside>
+                <section class="span9">
+                    <section class="blocks-spacer">
+                        <div id="first" class="row-fluid push-down-20">
+                            <div class="underlined push-down-20">
+                                <h3><span class="light">Как</span> сделать заказ?</h3>
+                            </div>
+                            <h5>Регистрация</h5>
+                            <p>Для оформления заказа необходимо зарегистрироваться на нашем сайте.</p>
+                            <p>В появившемся окне нужно заполнить обязательные поля (e-mail, ФИО, 
+                                телефоны и т.д) По окончании ввода нажмите кнопку «Зарегистрироваться».</p>
+                                <h5><span class="light">Как</span> оформить заказ?</h5>
+                                <p>Перед тем, как наполнять корзину, Вам необходимо выполнить вход используя Ваш логин и пароль.</p>
+                                <p>После авторизации на сайте, выберите нужный товар, укажите нужное 
+                                    количество и нажмите на кнопку "В КОРЗИНУ", товар автоматически попадет в
+                                    корзину. Содержимое заказа можно в любой момент просмотреть или 
+                                    отредактировать, переходя в корзину.</p>
+                                    <p>Для оформления заказа нажмите на кнопку "Оформить заказ", проверьте 
+                                        сумму и количество товаров, по желанию напишите комментарий к заказу и 
+                                        нажмите кнопку Купить.</p>
+                                        <h5><span class="light">Как</span> просмотреть историю своих заказов?</h5>
+                                        <p>Для просмотра истории заказов войдите в "Личный кабинет", в меню 
+                                            выберите "Мои заказы". Выберите номер заказа и нажмите "Повторить", 
+                                            далее Вы увидите краткую информацию о заказе.</p>
+                                            <p>Для просмотра товара с фотографиями и выборочного повтора заказа 
+                                                нажмите на на кнопку "Повторить заказ". Укажите нужное количество, 
+                                                удалите не нужные товаров из списка. Нажмите на кнопку "Добавить в 
+                                                корзину". По желанию Вы можете предварительно очистить корзину.</p>
+                                            </div>
+                                        </section>
+                                        <section>
+                                            <div id="two" class="underlined push-down-20">
+                                                <h3>Условия сотрудничества</h3>
+                                            </div>
+                                            <p>Минимальная сумма заказа составляет 1000 грн.</p>
+                                            <h5><span class="light">1.</span> Заключение Договора:</h5>
+                                            <p>Для заключения договора необходимо:</p>
+                                            <p>&nbsp;&nbsp;Для индивидуальных предпринимателей:</p>
+                                            <ul>
+                                                <li>свидетельство о регистрации СПД.</li>
+                                                <li>свидетельство о постановке на налоговый учет.</li>
+                                                <li>справка из банка об открытии счета.</li>
+                                                <li>Копия паспорта предпринимателя.</li>
+                                                <li>Полное наименование (юридический и фактический адрес, адрес 
+                                                    магазина/склада, банковские реквизиты, контактный телефон и адрес 
+                                                    электронной почты).</li>
+                                                </ul>
+                                                <p>&nbsp;&nbsp;Для юридических лиц:</p>
+                                                <ul>
+                                                    <li>свидетельство о регистрации юридического лица.</li>
+                                                    <li>свидетельство о постановке на налоговый учет.</li>
+                                                    <li>справка из банка об открытии счета.</li>
+                                                    <li>Копия устава: титульная страница, последняя страница, страница об 
+                                                        учредителях, страница о назначении и сроках полномочий директора.</li>
+                                                        <li>Полное наименование (юридический и фактический адрес, адрес 
+                                                            магазина/склада, банковские реквизиты, ФИО и контакты главного 
+                                                            бухгалтера, контактный телефон и адрес электронной почты).</li>
+                                                            <li>Образец подписи руководителя и копия печати предприятия.</li>
+                                                        </ul>
+                                                        <h5><span class="light">2.</span> Порядок оплаты товара</h5>
+                                                        <p>Оплата товара производится на основании выставленного счета.Срок 
+                                                            действия счета - 3 банковских дня. Если в течение этого времени Вы не 
+                                                            направили средства в оплату счета, он становится недействительным и Вам 
+                                                            необходимо созвониться со своим менеджером перед оплатой и получить от 
+                                                            компании новый счет.</p>
+                                                            <p>Датой оплаты заказа считается дата зачисления средств на расчетный 
+                                                                счет нашей компании. Возможна наличная и безналичная форма оплаты 
+                                                                товара.</p>
+                                                                <p>Платежи от частных лиц и от третьих лиц не принимаются.</p>
+                                                                <p>В компании действует индивидуальная для каждого клиента система скидок.</p>
+                                                                <h5><span class="light">3.</span> Доставка товара:</h5>
+                                                                <p>Представленные в каталоге товарные позиции находятся на складах и 
+                                                                    можно забрать самостоятельно с нашего склада либо оформив доставку.</p>
+                                                                    <p>Служба доставки нашей компании доставляет заказы свыше 5000 грн в 
+                                                                        пределах г. Одессы бесплатно. Доставка товара на сумму менее 5000 грн 
+                                                                        осуществляется на основании действующих тарифов.</p>
+                                                                        <p>Доставка товара в другие города Украины осуществляется через 
+                                                                            транспортную компанию, выбранную Покупателем. Оплата доставки заказа 
+                                                                            определяется исходя из расположения Покупателя. Стоимость доставки для 
+                                                                            заказанных товаров обсуждается непосредственно с транспортными 
+                                                                            компаниями. Стоимость доставки определяется тарифами 
+                                                                            фирмы-перевозчика.При доставке через транспортную компанию, которую 
+                                                                            выбирает Покупатель, обязательным условием является дополнительная 
+                                                                            (жесткая)упаковка груза, (данную услугу предоставляет транспортная 
+                                                                            компания). Если товар отгружался без обрешетки по желанию клиента, 
+                                                                            Поставщик не несет ответственности за возможный бой товара.</p>
+                                                                            <p>Доставка заказа, отпускаемого на условиях предоплаты, производится 
+                                                                                только после поступления денежных средств на расчетный счет нашей 
+                                                                                компании за заказанный товар.</p>
+                                                                            </section>
+                                                                            <hr></section>
 <!-- /main content -->            </div>
         </div>
     </div>
